// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-tooltip-beta #remove should remove component as expected (1) 1`] = `
<body>
  <div>
    <div>
      Element
    </div>
  </div>
</body>
`;

exports[`gux-tooltip-beta #remove should remove component as expected (2) 1`] = `
<body>
  <div>
    <div id="element">
      Element
    </div>
  </div>
</body>
`;

exports[`gux-tooltip-beta #render should render component as expected (1) 1`] = `
<body>
  <div aria-describedby="gux-tooltip-i" class="gux-tooltip-for-element">
    <div>
      Element
    </div>
    <gux-tooltip-beta id="gux-tooltip-i" role="tooltip" tabindex="0">
      <!---->
      Tooltip
    </gux-tooltip-beta>
  </div>
</body>
`;

exports[`gux-tooltip-beta #render should render component as expected (2) 1`] = `
<body>
  <div>
    <div aria-describedby="gux-tooltip-i" class="gux-tooltip-for-element" id="element">
      Element
    </div>
    <gux-tooltip-beta for="element" id="gux-tooltip-i" role="tooltip" tabindex="0">
      <!---->
      Tooltip
    </gux-tooltip-beta>
  </div>
</body>
`;
